# crates-io-proxy

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml
.github/workflows/: publish.yml  rust.yml
src/: config_json.rs  crate_info.rs  file_cache.rs  index_entry.rs  main.rs  metadata_cache.rs
