[package]
name = "crates-io-proxy"
description = "A dumb caching proxy for the crates.io download API"
version = "0.1.3"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
edition = "2021"
homepage = "https://github.com/ravenexp/crates-io-proxy"
repository = "https://github.com/ravenexp/crates-io-proxy"
license = "MIT OR Apache-2.0"
keywords = ["crates", "cargo", "registry", "cache"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
rouille = { version = "3.6", default-features = false }
url = "2.3"
ureq = "2.6"
pico-args = { version = "0.5", features = ["combined-flags"] }
log = "0.4"
env_logger = { version = "0.10", default-features = false }
