[package]
name = "crates-io-proxy"
description = "Caching HTTP proxy server for the crates.io registry"
version = "0.2.2"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
edition = "2021"
homepage = "https://github.com/ravenexp/crates-io-proxy"
repository = "https://github.com/ravenexp/crates-io-proxy"
license = "MIT OR Apache-2.0"
keywords = ["crates", "cargo", "registry", "proxy", "cache"]
categories = ["development-tools", "caching", "web-programming::http-server"]
readme = "README.md"

[dependencies]
tiny_http = "0.12"
httpdate = "1.0"
url = "2.5"
ureq = "2.9"
pico-args = { version = "0.5", features = ["combined-flags"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[profile.release]
lto = true
strip = "debuginfo"
